<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">日付：</string>
    <string name="title_text">タイトル：</string>
    <string name="detail_text">詳細：</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
    <string name="weight">体重</string>
    <string name="height">身長</string>
</resources>
